syntax = "proto3";

package Sucrose.Grpc.Common.Proto.Greeter;
option csharp_namespace = "Sucrose.Grpc.Common";

service Greeter {
    rpc SayHello (GreetingRequest) returns (GreetingResponse);
}

message GreetingRequest {
    string name = 1;
}

message GreetingResponse {
    string message = 1;
}